# dotfiles

./: .Xmodmap  .Xresources  .env.example  .gitconfig  .gitignore  .gitmodules  .ideavimrc  .inputremap  .vimrc  .vimrc-fn  .xbindkeysrc.scm  .xinitrc  .zshenv  .zshprofile  .zshrc  LICENSE  README.md  install  justfile  local-playbook.yml
.cargo/: config
.config/: greenclip.toml
.config/alacritty/: alacritty.yml
.config/dunst/: dunstrc
.config/kitty/: kitty.conf  sonokai.conf
.config/nvim/: .gitignore  init.lua
.config/nvim/ext/: dotfiles  jdtls
.config/nvim/lua/: editor.lua  keybindings.lua  opts.lua  overrides.lua  plugins.lua  settings.lua  theme.lua  utils.lua
.config/nvim/lua/editor/: cfg_tools.lua  languages.lua  spyglass.lua
.config/nvim/lua/theme/: galaxyline.lua  palette.lua
.config/nvim/themes/: sonokai.vim
.config/picom/: picom.conf
.config/tmux/: plugins.tmux  statusline.conf  tmux.conf  tmuxline.vim
.config/unread-bell/: utils.lua
.config/wezterm/: sonokai_colorscheme.lua  wezterm.lua
.xmonad/: .gitignore  cabal.project  qmonad.cabal  xinit
.xmonad/discord-bell/: .gitignore  config.example.json  discord-notifications.js  index.js  onclose.js  patcher  readme.md
.xmonad/scripts/: pulseaudio-display.sh
.xmonad/src/: xmobar-bottom.hs  xmobar-top.hs  xmobar.hs  xmonad.hs
.xmonad/src/QMonad/Config/: Applications.hs  ControlSliders.hs  Env.hs  Hooks.hs  IPC.hs  Keybindings.hs  Scratchpads.hs  Util.hs  Xmobar.hs
.xmonad/src/QMonad/Config/Hooks/: General.hs  Layouts.hs  Manage.hs
.xmonad/src/QMonad/Config/Layout/: FocalWindow.hs
.xmonad/src/QMonad/Lib/: Sliders.hs  WindowMeta.hs  WindowProp.hs  WorkspaceMasks.hs  Xov.hs
.xmonad/src/QMonad/Lib/Window/: Opacity.hs
.xmonad/src/QMonad/Shared/: Theme.hs
PKGBUILDS/nerd-fonts-patcher/: PKGBUILD
PKGBUILDS/qogir-gtk-theme/: PKGBUILD
PKGBUILDS/ttf-font-awesome-pro/: PKGBUILD
PKGBUILDS/unread-bell/: PKGBUILD
ansible/: .gitignore  ansible.cfg  default_vars.yml  local-playbook.yml  preinstall-playbook.yml
ansible/group_vars/: local.yml
ansible/modules/: xml_merge
ansible/playbooks/: init-playbook.yml
ansible/roles/alacritty/tasks/: main.yml
ansible/roles/git/: packages.yml
ansible/roles/git/files/: config
ansible/roles/git/tasks/: main.yml
ansible/roles/kitty/tasks/: main.yml
ansible/roles/nvim/: packages.yml
ansible/roles/nvim/tasks/: main.yml
ansible/roles/qde/: packages.yml
ansible/roles/qde/files/: Xresources
ansible/roles/qde/tasks/: main.yml
ansible/roles/rust/: packages.yml
ansible/roles/rust/tasks/: main.yml
ansible/roles/tmux/tasks/: main.yml
ansible/roles/udev-rules/files/: tablet-pad-bind.sh  tablet.rules
ansible/roles/udev-rules/tasks/: main.yml
ansible/roles/vim/: packages.yml
ansible/roles/vim/tasks/: main.yml
ansible/roles/x11/files/: xinitrc
ansible/roles/x11/tasks/: main.yml
ansible/roles/zsh/: packages.yml
ansible/roles/zsh/files/: zshrc
ansible/roles/zsh/tasks/: main.yml
ansible/scripts/: generate_install  generate_playbook  generate_tasks  generate_vars
ansible/vars/: dirs.yml  misc.yml
pkg/PKGBUILDS/ttf-font-awesome-pro/: PKGBUILD
playbooks/: init-playbook.yml  main-playbook.yml
roles/: .gitignore
roles/_prelude/paru/meta/: main.yml
roles/_prelude/qtheme/tasks/: main.yml
roles/_prelude/qtheme/templates/: qtheme.j2
roles/apps/discord/: packages.yml
roles/apps/discord/tasks/: main.yml
roles/apps/discord/templates/: patch-unread-bell.hook.j2
roles/apps/discord/unread-bell/: init.lua
roles/apps/intellij/: packages.yml
roles/apps/intellij/files/: ideavimrc
roles/apps/intellij/tasks/: main.yml
roles/apps/spotify/: packages.yml
roles/apps/spotify/bins/: spotify
roles/apps/spotify/tasks/: main.yml
roles/apps/vscode/: packages.yml
roles/apps/vscode/config/: build  editor.cue  languages.cue  misc.cue  vim.cue
roles/apps/vscode/files/: settings.json
roles/apps/vscode/tasks/: main.yml
roles/base/base/: packages.yml
roles/base/git/: packages.yml
roles/base/git/files/: .gitignore.global
roles/base/git/tasks/: main.yml
roles/base/git/templates/: config.j2
roles/base/gnupg/: packages.yml
roles/base/gnupg/files/: gpg-agent.conf
roles/base/gnupg/tasks/: main.yml  pinentry-wsl.yml
roles/base/gnupg/templates/: gpg-agent.conf.j2
roles/base/ssh/tasks/: main.yml
roles/base/vim/files/: vimrc
roles/base/vim/tasks/: main.yml
roles/desktop/alacritty/: packages.yml
roles/desktop/alacritty/tasks/: main.yml
roles/desktop/hyprland/: packages.yml
roles/desktop/qde/: packages.yml
roles/desktop/wayland/: packages.yml
roles/desktop/wezterm/: packages.yml
roles/desktop/x11/: packages.yml
roles/editor/intellij/: packages.yml
roles/editor/vscode/: packages.yml
roles/lang/java/: packages.yml
roles/lang/rust/: packages.yml
roles/linux-desktop/greetd/: packages.yml
roles/linux-desktop/kitty/: packages.yml
roles/linux-desktop/qde/: packages.yml
roles/linux-desktop/x11/: packages.yml
roles/misc/gnupg/: packages.yml
roles/misc/ssh/: packages.yml
roles/system/greetd/: packages.yml
roles/tools/maven/: packages.yml
roles/workflow/misctools/: packages.yml
roles/workflow/monitor/: packages.yml
roles/workflow/nvim/: packages.yml
roles/workflow/tmux/: packages.yml
roles/workflow/zsh/: packages.yml
themes/: _templates.yml  kanagawa.yml  sonokai.yml
themes/templates/: kitty.j2  tmux.j2  xmonad.j2
xmonad/: .gitignore  build  buildbar  cabal.project  qmonad.cabal  xinit
xmonad/config/: theme.yml
xmonad/qwmhctl/: .gitignore  getworkspaces.go  go.sum  main.go
xmonad/src/: xmobar.hs  xmonad.hs
xmonad/src/QMonad/Config/: Aggregate.hs  Applications.hs  ControlSliders.hs  Env.hs  IPC.hs  Keybindings.hs  Prompt.hs  QwmhDesktops.hs  Scratchpads.hs  Theme.hs  Util.hs  Xmobar.hs
xmonad/src/QMonad/Config/Hooks/: General.hs  Layouts.hs  Manage.hs
xmonad/src/QMonad/Config/Layout/: ForeignLayout.hs
xmonad/src/QMonad/Lib/: WorkspaceMasks.hs
xmonad/src/QMonad/Lib/Window/: Opacity.hs
xmonad/src/QMonad/Shared/: XmobarColors.hs
(+158 files in other folders)
