cabal-version: >=1.10
build-type: Simple

name: qmonad
version: 1.4.0
author: Unoqwy <julien.qwy@gmail.com>
license: MIT

library
  hs-source-dirs: src

  default-language: Haskell2010
  build-depends:
    base >=4.9 && <5,
    containers,
    bifunctors,
    X11 >=1.10,
    time,
    xmonad >=0.16.9999,
    xmonad-contrib >=0.16.999

executable qmonad
  main-is: xmonad.hs
  hs-source-dirs: src

  other-modules:
    QMonad.Config.Applications
    QMonad.Config.Env
    QMonad.Config.IPC
    QMonad.Config.Keybindings
    QMonad.Config.Prompt
    QMonad.Config.Xmobar
    QMonad.Config.Scratchpads
    QMonad.Config.Hooks.General
    QMonad.Config.Hooks.Layouts
    QMonad.Config.Hooks.Manage
    QMonad.Lib.Window.Minimize
    QMonad.Lib.Window.Opacity
    QMonad.Lib.WorkspaceMasks
    QMonad.Shared.Theme

  default-language: Haskell2010
  build-depends:
    base,
    containers,
    bifunctors,
    X11,
    time,
    xmonad,
    xmonad-contrib

executable qmobar
  main-is: xmobar.hs
  hs-source-dirs: src

  other-modules:
    QMonad.Shared.Theme

  default-language: Haskell2010
  build-depends:
    base,
    containers,
    directory,
    split,
    dotenv,
    xmobar ==0.39.*

