cabal-version: >=1.10
build-type: Simple

name: qmonad
version: 1.5.0
author: Unoqwy <julien.qwy@gmail.com>
license: MIT

library
  hs-source-dirs: src

  default-language: Haskell2010
  build-depends:
    base >=4.9 && <5,
    containers,
    bifunctors,
    either,
    X11 >=1.10,
    X11-xft >=0.3,
    time,
    process,
    utf8-string,
    yaml,
    xmonad >=0.16.9999,
    xmonad-contrib >=0.16.999

executable qmonad
  main-is: xmonad.hs
  hs-source-dirs: src

  other-modules:
    QMonad.Config.Applications
    QMonad.Config.Env
    QMonad.Config.IPC
    QMonad.Config.Keybindings
    QMonad.Config.Prompt
    QMonad.Config.Xmobar
    QMonad.Config.Scratchpads
    QMonad.Config.Theme
    QMonad.Config.ControlSliders
    QMonad.Config.Util
    QMonad.Config.Hooks.General
    QMonad.Config.Hooks.Layouts
    QMonad.Config.Hooks.Manage
    QMonad.Config.Layout.FocalWindow
    QMonad.Config.Layout.LayoutDescriptionMeta
    QMonad.Lib.Window.Minimize
    QMonad.Lib.Window.Opacity
    QMonad.Lib.Xov
    QMonad.Lib.Sliders
    QMonad.Lib.WorkspaceMasks
    QMonad.Shared.XmobarColors

  default-language: Haskell2010
  build-depends:
    base,
    containers,
    bifunctors,
    either,
    X11,
    X11-xft,
    time,
    process,
    utf8-string,
    yaml,
    xmonad,
    xmonad-contrib

executable qmobar
  main-is: xmobar.hs
  hs-source-dirs: src

  other-modules:
    QMonad.Shared.XmobarColors

  default-language: Haskell2010
  build-depends:
    base,
    containers,
    directory,
    split,
    dotenv,
    xmobar ==0.39.*

