cabal-version: >=1.10
build-type: Simple

name: qmonad
version: 1.5.0
author: Unoqwy <julien.qwy@gmail.com>
license: MIT

library
  hs-source-dirs: src

  default-language: Haskell2010
  build-depends:
    base >=4.11 && <5,
    containers,
    bifunctors,
    either,
    X11 >=1.10 && <1.11,
    X11-xft >=0.3,
    time,
    process,
    utf8-string,
    yaml,
    xmonad >=0.17 && <1.18,
    xmonad-contrib >=0.16 && <1.18

executable qmonad
  main-is: xmonad.hs
  hs-source-dirs: src

  other-modules:
    QMonad.Config.Applications
    QMonad.Config.ControlSliders
    QMonad.Config.DoNotDisturb
    QMonad.Config.Env
    QMonad.Config.Hooks.General
    QMonad.Config.Hooks.Layouts
    QMonad.Config.Hooks.Manage
    QMonad.Config.IPC
    QMonad.Config.Keybindings
    QMonad.Config.Layout.FocalWindow
    QMonad.Config.Layout.LayoutDescriptionMeta
    QMonad.Config.Prompt
    QMonad.Config.Scratchpads
    QMonad.Config.Theme
    QMonad.Config.Util
    QMonad.Config.Xmobar
    QMonad.Lib.Sliders
    QMonad.Lib.Window.Minimize
    QMonad.Lib.Window.Opacity
    QMonad.Lib.WorkspaceMasks
    QMonad.Lib.Xov
    QMonad.Shared.XmobarColors

  default-language: Haskell2010
  build-depends:
    base,
    containers,
    bifunctors,
    either,
    X11,
    X11-xft,
    time,
    process,
    utf8-string,
    yaml,
    xmonad,
    xmonad-contrib

executable qmobar
  main-is: xmobar.hs
  hs-source-dirs: src

  other-modules:
    QMonad.Shared.XmobarColors

  default-language: Haskell2010
  build-depends:
    base,
    containers,
    directory,
    split,
    dotenv,
    xmobar ==0.39.*

